# messenger-desktop

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING-AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
docs/: ROUND15-PLAN.md  SECURITY-AUDIT.md
src/: index.html  index.ts  keyboard-shortcuts.ts  notification-interceptor.ts  platform-selector.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  commands.rs  debug.rs  drag_drop.rs  lib.rs  main.rs  media.rs  notifications.rs  platform_manager.rs  privacy.rs  privacy_engine.rs  shortcuts.rs  spellcheck.rs  theme_manager.rs  tray.rs  updater.rs  window_manager.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tasks/: todo.md
src-tauri/tests/: test_accounts.rs  test_notifications.rs  test_privacy.rs  test_shortcuts.rs  test_theme_manager.rs  test_tray.rs  test_updater.rs  test_window_manager.rs
src/injection/: index.ts  keyboard-shortcuts.ts  notification-interceptor.ts  privacy-guard.ts  theme-injector.ts  unread-counter.ts
src/settings/: settings.css  settings.html  settings.ts
tasks/: r18-audit.md  r19-spec.md  todo.md
