[package]
name = "messenger-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "global-shortcut"] }
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
