[package]
name = "messenger-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "shell-open"] }
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-updater = "2.0"

serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
specta = { version = "2.0.0-rc.22", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
