[package]
name = "messenger-desktop"
version = "0.2.5"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard-manager = "2.0"
image = "0.24"
arboard = "3.3"
# hunspell = "0.1" # Disabled due to compilation issues

serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
specta = { version = "2.0.0-rc.22", features = ["derive", "function"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
mime_guess = "2.0"
dirs = "4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
objc2 = "0.5"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
